syntax = "proto3";

package mercury.store;

option go_package = "gen/store";

enum SystemSettingKey {
  SYSTEM_SETTING_KEY_UNSPECIFIED = 0;
  BACKUP_CONFIG = 1;
}

message BackupConfig {
  bool enabled = 1;
  // For more information about cron expression
  // see: https://pkg.go.dev/github.com/robfig/cron?utm_source=godoc#hdr-CRON_Expression_Format
  string cron = 2;
  // number of backups to keep.
  int32 max_keep = 3;
}